# polkadot-hackathon-2025

03-Worboo/: .eslintrc.cjs  .prettierignore  AGENTS.md  README.md  package-lock.json  package.json
03-Worboo/doc/: README - polkadot.md  demo-playbook.md  deployment-guide.md  deployment-guide.zh-CN.md  handoff.md  observability.md  roadmap-next.md
03-Worboo/react-wordle/: package.json
1626-Polkadot-DotDuel_v2/: .gitignore
1942-life++-poc/: README.en.md  README.md
Picker/: README.md
Picker/chain-capability-mcp-server/: Cargo.toml  README.md
Picker/chain-capability-mcp-server/src/: basic_blockchain_tools.rs  config.rs  create_erc20_token.rs  create_erc721_nft.rs  cross_chain_pay_tool.rs  main.rs
Picker/contract/: hardhat.config.ts  package-lock.json  package.json
Picker/contract/contracts/: PickerPayment.sol  PickerPayment.t.sol
Picker/contract/test/: PickerPayment.ts
Picker/desktop/src/: App.tsx
Picker/rust-agent-crate/: Cargo.toml  README.md
Picker/server/: Cargo.toml  config.toml
desktop/: tauri-frontend-ui-development.md
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src-tauri/src/api/: client.rs
desktop/src-tauri/src/commands/: download.rs  mod.rs  orders.rs  pickers.rs  task.rs  users.rs
server/: .gitignore  Cargo.toml  SWAGGER_INTEGRATION.md  SWAGGER_INTEGRATION_COMPLETE.md  config.toml  test-swagger-api.sh
server/src/: config.rs  config_tests.rs  database.rs  download.rs  main.rs  models.rs  openapi.rs  utils.rs
server/tests/: integration_tests.rs
(+66 files in other folders)
