[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = ["config-json5"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = ["devtools", "config-json5"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tauri-plugin-store = "2"
anyhow = "1.0"
base64 = "0.21.0"
dirs = "5.0.1"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-opener = "2.5.0"
alloy = "1.0.30"
chrono = { version = "0.4.42" }

[dev-dependencies]
mockito = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serial_test = "2.0"
mockall = "0.11"
tempfile = "3.0"
ctor = "0.2"
